--- a/SpectrumAssignment/SpectrumAssignment.iOS/SpectrumAssignment.iOS.csproj
+++ b/SpectrumAssignment/SpectrumAssignment.iOS/SpectrumAssignment.iOS.csproj
@@ -65,9 +65,12 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\BorderlessEditorRenderer.cs" />
+    <Compile Include="Renderers\BorderlessEntryRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <BundleResource Include="Resources\fa-regular-pro-400.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -144,5 +147,8 @@
       <Project>{C896B8D9-0A11-40DC-A5B0-507D8D44743D}</Project>
       <Name>SpectrumAssignment</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\spectrums.png" />
   </ItemGroup>
 </Project>
