--- a/SpectrumAssignment/SpectrumAssignment.iOS/Info.plist
+++ b/SpectrumAssignment/SpectrumAssignment.iOS/Info.plist
@@ -34,5 +34,9 @@
     <string>SpectrumAssignment</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>fa-regular-pro-400.ttf</string>
+	</array>
 </dict>
 </plist>
