--- a/SpectrumAssignment/SpectrumAssignment/SpectrumAssignment.csproj
+++ b/SpectrumAssignment/SpectrumAssignment/SpectrumAssignment.csproj
@@ -8,18 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
-	  <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
 	  <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.19.0" />
 	  <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.759" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="CustomControls\ButtonControlWithProgressBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="CustomControls\LoaderControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
